--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,31 @@
 @import url("photographer.css");
+@import url("reset.css");
+@import url("variables.css");
 
 body {
     font-family: "DM Sans", sans-serif;
-    margin: 0;
+    font-size: 16px;
 }
 
 
-header {
+.header {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 90px;
+    padding-top: var(--spacing-3xl);
+    padding-bottom: var(--margin-2xl);
+    max-width: var(--max-breakpoint);
+    margin: 0 auto;
 }
 
-h1 {
-    color: #901C1C;
-    margin-right: 100px;
+.header__title {
+    font-weight: 400;
+    font-size: var(--title-font-size);
+    line-height: var(--title-line-height);
+    color: var(--primary-color);
 }
 
-.logo {
-    height: 50px;
-    margin-left: 100px;
-}
-
-.photographer_section {
+/* .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
@@ -47,4 +48,4 @@ h1 {
 .photographer_section article img {
     height: 200px;
     width: 200px;
-}
+} */
