--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,17 @@ body {
     max-width: var(--max-breakpoint);
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: var(--spacing-8xl);
+    grid-template-columns: repeat(3, 200px);
+    gap: var(--spacing-8xl);
     justify-items: center;
+    justify-content: space-between;
 }
 
 .main__card {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 200px;
 }
 
 .main__card__head-card {
@@ -58,6 +60,8 @@ body {
     line-height: var(--title-line-height);
     color: var(--secondary-color);
     text-align: center;
+    padding-top: var(--spacing-lg);
+    text-wrap: nowrap;
 }
 
 .main__card__body-card {
@@ -98,13 +102,3 @@ body {
     align-items: center;
     flex-direction: column;
 }
-
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
-}
-
-.photographer_section article img {
-    height: 200px;
-    width: 200px;
-} */
