--- a/css/variables.css
+++ b/css/variables.css
@@ -28,6 +28,7 @@
     --spacing-6xl: 64px;
     --spacing-7xl: 72px;
     --spacing-8xl: 80px;
+    --spacing-9xl: 88px;
 
     --max-breakpoint: 1240px;
 }
