--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-@import url("./photographer.css");
-@import url("./reset.css");
-@import url("./variables.css");
+@import "./reset.css";
+@import "./variables.css";
 
 body {
     font-family: "DM Sans", sans-serif;
